CB-4400 removed project margin styles to prevent tree jump on DnD

--- a/webapp/packages/plugin-navigation-tree-rm/src/Tree/ProjectsRenderer/NavigationTreeProjectsRendererRenderer.m.css
+++ b/webapp/packages/plugin-navigation-tree-rm/src/Tree/ProjectsRenderer/NavigationTreeProjectsRendererRenderer.m.css
@@ -1,11 +1,6 @@
 .projectNode {
   margin-top: 8px;
 
-  &.project:only-child,
-  &.hideProjects {
-    margin-top: 0px;
-  }
-
   & > .navigationNodeNested {
     padding-left: 0 !important;
   }
